# Window-focus-animate-GNOME-extension

./: API_COMPAT.md  README.md  extension.js  meson.build  metadata.json  prefs.js
locale/zh_CN/LC_MESSAGES/: window-focus-slide@sky_is_calling.mo
po/: window-focus-slide@sky_is_calling.pot  zh_CN.mo  zh_CN.po
schemas/: gschemas.compiled  org.gnome.shell.extensions.window-focus-slide.gschema.xml
